--- a/app/src/main/res/layout/suggestion.xml
+++ b/app/src/main/res/layout/suggestion.xml
@@ -10,8 +10,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="15dp"
-        android:layout_marginTop="15p"
-        android:text="生活建议"/>
+        android:layout_marginTop="15dp"
+        android:text="生活建议"
+        android:textColor="#fff"/>
 
     <TextView
         android:id="@+id/comfort_text"
